# VehicleRoutingProblem

./: .gitignore  GEMINI.md  Makefile  README.md  aco_vrp_mpi_cuda  aco_vrp_new_cuda  benchmark_results.csv  check_dist.c  norm.md  norm_compliance_report.md  problem_solution.txt  pyproject.toml  requirements.txt
docs/: README.md  RoadmapOpenMP_MPI.md  benchmarking.md  build.md  cluster_usage.md  cuda_solver_critique_report.md  cuda_v1_baseline.md  cuda_v2_warp_parallel.md  cuda_v3_final.md  cuda_v4_implementation_plan.md  cuda_v6_scaling_report.md  experiments.md  historical_experiments.md  implementations.md  instances.md  paper.md  practical_experiment_campaign.md  repository_structure.md  results.md  slurm_cluster_commands.md  spiegazione_backend.aux  spiegazione_backend.toc  tooling_audit.md  troubleshooting.md  vrp_report_blueprint_from_zanoni_martinelli.md
docu_cuda/: aco_cuda.md  aco_cuda_host_utils.md  aco_cuda_kernels.md  main_vrp.md
exp_dist_calc/: bench_gpu.cu  run_exp.py
experimental/: README.md
include/: aco.h  aco_config.h  aco_cuda_kernels.h  aco_cuda_v1_kernels.h  aco_cuda_v2_kernels.h  aco_cuda_v3_kernels.h  aco_cuda_v4_kernels.h  aco_cuda_v5_kernels.h  aco_cuda_v6_kernels.h  aco_internal.h  aco_mpi_internal.h  acocopy.h  cli_common.h  config.h  instance_parser.h  internal.h  local_search.h  matrix.h  matrixcopy.h  solution.h  solutioncopy.h  solver.h
instances/: README.md
nuovi_grafici/: cuda_merged_with_v6.csv  mpi_strong.csv  openmp_mpi_strong.csv  openmp_strong.csv  plot_benchmarks.py  seq.csv
nuovo_cuda/: design.md
paper/: Makefile  (+2 more)
(+485 files in other folders)
